--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -129,7 +129,7 @@
     \end{itemize}
     \begin{figure}
       \includegraphics[width = 7.5cm]{figure/reidemeister.png}
-      \caption{Reidemeister moves for theta-curves and handcuff graphs}
+      \caption{Generalized Reidemeister move}
     \end{figure}
     
   \end{block}
