--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -760,11 +760,9 @@
     %   \item It represents a theta-curve or a handcuff graph.
     % \end{enumerate}
     $\mathbf{Definition.}$ Let any exception row(with three `1's) $i$ and its two outer 1s $j$, $k$.
-    The \textbf{H-deletion Matrix} of Cromwell matrix of $\theta$-curve and handcuff graph is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.
+    The \textbf{H-deletion Matrix} of $\theta$-curve and handcuff graph is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.
 
     \vspace{1em}
-
-
     $\mathbf{Theorem.}$ The given Cromwell matrix of $\theta$-curve and handcuff graph is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$,
     and is handcuff graph if and only if determinant of the H-deletion matrix is $0$ or $\pm 2$.\\
     \begin{figure}[h]
