--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -127,10 +127,15 @@
       \item \textbf{Handcuff graph} : consists of two loops and an edge joining the loops
       \item \textbf{Generalized Reidemeister move} : used to transform a projection of theta-curve
     \end{itemize}
-    \begin{figure}
-      \includegraphics[width = 7.5cm]{figure/reidemeister.png}
-      \caption{Generalized Reidemeister move}
-    \end{figure}
+    \begin{figure}[h]
+        \centering
+        \begin{tabular}{ccc}
+          \includegraphics[width=0.3\textwidth]{figure/grid.png} &
+          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} &
+          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} \\
+        \end{tabular}
+        \caption{$\theta$-curve, handcuff graph, and generalized reidemeister move}
+      \end{figure}
     
   \end{block}
     \column{0.33\textwidth}
