--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -804,9 +804,12 @@
   \begin{block}{Refernces}
     \begin{enumerate}
       \item Yoonsang Lee. (year). \textit{A Study on Arc Index of Theta-Curves}. Korea Science Academy of KAIST
-      \item H. Moriuchi. (2009). \textit{A table of $\theta$-curves and handcuff graphs with up to seven crossings}. Advanced Studies in Pure Mathematics 55, 2009 Noncommutativity and Singularities
-pp. 281-290
-      \item MINJUNG LEE & SUNGJONG NO & AND SEUNGSANG OH. (2017). \textit{ARC INDEX OF SPATIAL GRAPHS}. arXiv:1711.08116v1 [math.GT] 22 Nov 2017
+      \item Kawauchi, A. (2011). On Transforming a Spatial Graph into a Plane Graph. \textit{Progress of Theoretical Physics Supplement, 191}, 225–234. https://doi.org/10.1143/ptps.191.225
+      \item Lee, M. J., No, S., & Oh, S. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415. https://doi.org/10.1002/jgt.22404
+      \item Cromwell, P. R. (1995). Embedding knots and links in an open book I: Basic properties. \textit{Topology and Its Applications, 64}(1), 37–58. https://doi.org/10.1016/0166-8641(94)00087-j
+      \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290. https://doi.org/10.2969/aspm/05510281
+      \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551. https://doi.org/10.1002/jgt.3190130503
+      
     \end{enumerate}
   \end{block}
 \end{columns}
