--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -129,13 +129,18 @@
     \end{itemize}
     \begin{figure}[h]
         \centering
-        \begin{tabular}{ccc}
-          \includegraphics[width=0.3\textwidth]{figure/grid.png} &
-          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} &
-          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} \\
+        \begin{tabular}{cc}
+          \includegraphics[width=0.1\textwidth]{figure/y6.png} &
+          \includegraphics[width=0.3\textwidth]{figure/y7.png} \\
         \end{tabular}
-        \caption{$\theta$-curve, handcuff graph, and generalized reidemeister move}
-      \end{figure}
+        \caption{$\theta$-curve, handcuff graph}
+    \end{figure}
+    \begin{figure}
+      \centering
+      \includegraphics[width=0.3\textwidth]{figure/reidemeister.png}
+      \caption{Generalized reidemeister move}
+    \end{figure}
+
     
   \end{block}
     \column{0.33\textwidth}
