--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -133,10 +133,12 @@
           \includegraphics[width=0.1\textwidth]{figure/y6.png} &
           \includegraphics[width=0.3\textwidth]{figure/y7.png} \\
         \end{tabular}
+        \caption{Trivial $\theta$-curve and handcuff graph}
     \end{figure}
     \begin{figure}
       \centering
       \includegraphics[width=0.3\textwidth]{figure/reidemeister.png}
+      \caption{Generalized reidemeister move}
     \end{figure}
 
     
