--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -129,16 +129,12 @@
     \end{itemize}
     \begin{figure}[h]
         \centering
-        \begin{tabular}{cc}
+        \begin{tabular}{ccc}
           \includegraphics[width=0.1\textwidth]{figure/y6.png} &
-          \includegraphics[width=0.3\textwidth]{figure/y7.png} \\
+          \includegraphics[width=0.3\textwidth]{figure/y7.png} &
+          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} \\
         \end{tabular}
-        \caption{Trivial $\theta$-curve and handcuff graph}
-    \end{figure}
-    \begin{figure}
-      \centering
-      \includegraphics[width=0.3\textwidth]{figure/reidemeister.png}
-      \caption{Generalized reidemeister move}
+        \caption{Trivial $\theta$-curve, handcuff graph and Generalized reidemeister move}
     \end{figure}
 
     
