--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -189,7 +189,6 @@
 \end{columns}
 
  \begin{alertblock}{Grid Diagram of the Theta-Curves and Handcuff Graphs Up to 7 Crossings}
-  \hspace{1cm}
   \begin{columns}[t]
   \begin{column}{0.6\textwidth}
   \begin{alertblock}{Theta-Curves}
@@ -803,22 +802,24 @@
     
     $\mathbf{Theorem.}$ Let $S_T$ be a simple closure of stacked tangle of a theta-curve or handcuff graph, and let $n$ be the number of crossings in $S_T$. Then,
      \[ \mathrm{spr}(R(S_T)) \leq 2n+2 \]
+  \end{block}
+  \column{0.33\textwidth}
+
+  \begin{beamercolorbox}[rounded=true, shadow=false, wd=\textwidth]{block body}
     where $R(S_T)$ is the Yamada polynomial of $S_T$, and $\mathrm{spr}(f)$ denotes the difference between the maximal and minimal degrees of $f$. \\
 
     \vspace{1em}
 
     $\mathbf{Corollary.}$  Let $G$ be a theta-curve or handcuff graph. Then, the arc index of $G$ is bounded by
       \[ \alpha(G) \geq \frac{5 + \sqrt{4 \mathrm{spr}(R(G)) - 15}}{2}. \]
-  \end{block}
-  \column{0.33\textwidth}
+  \end{beamercolorbox}
+
   \begin{block}{Refernces}
     \begin{enumerate}
       \item Yoonsang Lee. (year). \textit{A Study on Arc Index of Theta-Curves}. Korea Science Academy of KAIST
-      \item Kawauchi, A. (2011). On Transforming a Spatial Graph into a Plane Graph. \textit{Progress of Theoretical Physics Supplement, 191}, 225–234. https://doi.org/10.1143/ptps.191.225
-      \item Lee, M. J., No, S., & Oh, S. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415. https://doi.org/10.1002/jgt.22404
-      \item Cromwell, P. R. (1995). Embedding knots and links in an open book I: Basic properties. \textit{Topology and Its Applications, 64}(1), 37–58. https://doi.org/10.1016/0166-8641(94)00087-j
-      \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290. https://doi.org/10.2969/aspm/05510281
-      \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551. https://doi.org/10.1002/jgt.3190130503
+      \item Lee, M. J., No, S., & Oh, S. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
+      \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
+      \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.
       
     \end{enumerate}
   \end{block}
