--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -130,11 +130,15 @@
     \begin{figure}[h]
         \centering
         \begin{tabular}{ccc}
-          \includegraphics[width=0.1\textwidth]{figure/y6.png} &
-          \includegraphics[width=0.3\textwidth]{figure/y7.png} &
-          \includegraphics[width=0.3\textwidth]{figure/reidemeister.png} \\
+          \includegraphics[width=0.05\textwidth]{figure/y6.png} &
+          \includegraphics[width=0.15\textwidth]{figure/y7.png} \\
         \end{tabular}
-        \caption{Trivial $\theta$-curve, handcuff graph and Generalized reidemeister move}
+        \caption{Trivial $\theta$-curve and handcuff graph}
+    \end{figure}
+    \begin{figure}
+      \centering
+      \includegraphics[width=0.3\textwidth]{figure/reidemeister.png}
+      \caption{Generalized reidemeister move}
     \end{figure}
 
     
