--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -164,10 +164,14 @@
   \begin{block}{Stacked Tangle Representation}
 
   \begin{itemize}
-    \item \textbf{Stacked tangle} : A configuration of stacked disks with arcs and caps
-    \item \textbf{Arcs} : Segments properly embedded in each disk, with endpoints on the boundary
+    \item \textbf{Non-simple disk} : A disk which contains one vertex and three line segments which joins the vertex and boundary point. 
+    \item \textbf{Simple disk} : A disk which contains simple arc which joins two points on the boundary.
+    \item \textbf{Stacked tangle} : Stacked disks each with the frame as boundary with following properties: \\
+    \textbf{-} asd \\
+    \textbf{-} asdfadf\\
+    %\item \textbf{Arcs} : Segments properly embedded in each disk, with endpoints on the boundary
     \item \textbf{Caps} : Segments from the arc in one disk to the arc in another disk
-    \item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
+    %\item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
   \end{itemize}
 
   
