--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -166,11 +166,11 @@
   \begin{itemize}
     \item \textbf{Non-simple disk} : A disk which contains one vertex and three line segments which joins the vertex and boundary point. 
     \item \textbf{Simple disk} : A disk which contains simple arc which joins two points on the boundary.
-    \item \textbf{Stacked tangle} : Stacked disks each with the frame as boundary with following properties: \\
-    \textbf{-} asd \\
-    \textbf{-} asdfadf\\
+    \item \textbf{Stacked tangle} : Stacked disks each with the frame as boundary. Only two disks are non-simple disks(one is at the top), and others are simple disks. \\
     %\item \textbf{Arcs} : Segments properly embedded in each disk, with endpoints on the boundary
-    \item \textbf{Caps} : Segments from the arc in one disk to the arc in another disk
+    \item \textbf{Caps} : simple arc in outside of stacked tangle joining end points of arcs or line segments. \\
+    \item When viewed from above, two arcs in different simple disks or arc in simple disk and tree in non-simple disk intersect at most one point, and any two caps have no intersection.
+    \item \textbf{Reduced simple closure of a stacked tangle} : a simple closure of a stacked tangle without any nested caps. When viewed from above, any two arcs(including line segment) joining by caps have no intersection.
     %\item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
   \end{itemize}
 
