--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -139,7 +139,47 @@
     
   \end{block}
     \column{0.33\textwidth}
+  \begin{block}{Stacked Tangle Representation}
+
+    \begin{itemize}
+    \item \textbf{Non-simple disk} : A disk which contains one vertex and three line segments which joins the vertex and boundary point. 
+    \item \textbf{Simple disk} : A disk which contains simple arc which joins two points on the boundary.
+    \item \textbf{Stacked tangle} : Stacked disks each with the frame as boundary. Only two disks are non-simple disks(one is at the top), and others are simple disks. \\
+    %\item \textbf{Arcs} : Segments properly embedded in each disk, with endpoints on the boundary
+    \item \textbf{Caps} : Simple arc in outside of stacked tangle joining end points of arcs or line segments. \\
+    \begin{figure}
+      \centering
+      \includegraphics[width=0.45\textwidth]{figure/stacked_theta.png}
+      \caption{Stacked tangle of $\theta$-curve}
+    \end{figure}
+    
+    %\item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
+  \end{itemize}
+
+  
+  % Then a simple closure of a stacked tangle without any nested caps is
+  % corresponding to an arc presentation.
+
+  
+  \end{block}
+  \column{0.33\textwidth}
+
+  %%여기 조은찬이 다 주석처리 해뒀음
+
+  %\begin{beamercolorbox}[rounded=true, shadow=false, wd=\textwidth]{block body}
+   % \begin{itemize}
+    %  \item Two arcs in different simple disks or arc in simple disk and tree in non-simple disk intersect at most one point, and any two caps have no intersection when viewed from above.
+    %\begin{figure}
+     % \centering
+      %\includegraphics[width=0.7\textwidth]{../Midterm_Poster/figure/stacked_tangle.png}
+      %\caption{Stacked tangle and simple closure of handcuff graph $2_1$}
+    %\end{figure}
+      %\item \textbf{Reduced simple closure of a stacked tangle} : A simple closure of a stacked tangle without any nested caps. Any two arcs(including line segment) joining by caps have no intersection when viewed from above.
+    %\end{itemize}
+  %\end{beamercolorbox}
   \begin{block}{Diagrams}
+
+    
 
     \begin{Diagrams}
       \caption{An algorithm with caption}\label{alg:cap}
@@ -158,31 +198,6 @@
         \caption{Grid diagram and Arc presentation of $\theta$-curve $3_1$}
       \end{figure}
     \end{Diagrams}
-
-  \end{block}
-  \column{0.33\textwidth}
-  \begin{block}{Stacked Tangle Representation}
-
-  \begin{itemize}
-    \item \textbf{Non-simple disk} : A disk which contains one vertex and three line segments which joins the vertex and boundary point. 
-    \item \textbf{Simple disk} : A disk which contains simple arc which joins two points on the boundary.
-    \item \textbf{Stacked tangle} : Stacked disks each with the frame as boundary. Only two disks are non-simple disks(one is at the top), and others are simple disks. \\
-    %\item \textbf{Arcs} : Segments properly embedded in each disk, with endpoints on the boundary
-    \item \textbf{Caps} : simple arc in outside of stacked tangle joining end points of arcs or line segments. \\
-    \item When viewed from above, two arcs in different simple disks or arc in simple disk and tree in non-simple disk intersect at most one point, and any two caps have no intersection.
-    \item \textbf{Reduced simple closure of a stacked tangle} : a simple closure of a stacked tangle without any nested caps. When viewed from above, any two arcs(including line segment) joining by caps have no intersection.
-    %\item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
-  \end{itemize}
-
-  
-  % Then a simple closure of a stacked tangle without any nested caps is
-  % corresponding to an arc presentation.
-
-  \begin{figure}
-      \centering
-      \includegraphics[width=0.7\textwidth]{../Midterm_Poster/figure/stacked_tangle.png}
-      \caption{Stacked tangle and simple closure of handcuff graph $2_1$}
-  \end{figure}
 
   \end{block}
 \end{columns}
