--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -144,7 +144,7 @@
   \begin{block}{Diagrams}
 
     \begin{Diagrams}
-      \caption{An algorithm with caption}\label{alg:cap}
+      %\caption{An algorithm with caption}\label{alg:cap}
       \begin{itemize} 
         \item \textbf{Grid diagram}: A link diagram of vertical strands and the same number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co-linear and no two vertical segments are co-linear.
         \item \textbf{Cromwell matrix}: An n × n binary matrix each of whose rows and columns has exactly two 1’s.
